fix padding on mobile

--- a/assets/stylesheets/bootstrap-responsive.css
+++ b/assets/stylesheets/bootstrap-responsive.css
@@ -681,7 +681,7 @@
 
 @media (max-width: 979px) {
   body {
-    padding-top: 0;
+    padding-top: 0 !important;
   }
   .navbar-fixed-top {
     position: static;
